variables.Variables.scala.error
Erreur de compilation :
Variables:3: error: not found: value While
While (estSurBiscuit==false){
^Variables:5: error: recursive variable nbPas needs type
 var nbPas=nbPas+1
           ^